+ /dir/customers OpenApi
