# handlers/contacts.js
@@ -1,8 +1,8 @@
 'use strict';
 
 const Boom = require('boom');
-// const contacts = require('./contacts.json');
-const contacts = require('../data/contacts')
+const contacts = require('../data/contacts.json');
+// const contacts = require('../data/contacts')
 
 /**
  * Operations on /contacts
@@ -16,14 +16,14 @@ module.exports = {
    * responses: 200
    */
   get: async function contacts_get(request, h) {
-    const requests = new Promise((resolve, reject) => {
-      contacts.get["200"](request, h, function (error, mock) {
-        return error ? reject(error) : resolve(mock);
-      });
-    });
-    const mock = await requests;
-    return mock;
-    // return contacts;
+    // const requests = new Promise((resolve, reject) => {
+    //   contacts.get["200"](request, h, function (error, mock) {
+    //     return error ? reject(error) : resolve(mock);
+    //   });
+    // });
+    // const mock = await requests;
+    // return mock;
+    return contacts;
     // return Boom.notImplemented();
   }
 };
