# handlers/contacts/{id}.js
@@ -1,19 +1,0 @@
-'use strict';
-
-const Boom = require('boom');
-
-/**
- * Operations on /contacts/{id}
- */
-module.exports = {
-    /**
-     * summary: 
-     * description: 
-     * parameters: id
-     * produces: application/json, text/json
-     * responses: 200
-     */
-    get: function contacts_getById(request, h) {
-        return Boom.notImplemented();
-    }
-};
