# handlers/customers/{customerId}.js
@@ -1,0 +1,39 @@
+'use strict';
+
+const Boom = require('boom');
+
+/**
+ * Operations on /customers/{customerId}
+ */
+module.exports = {
+    /**
+     * summary: 
+     * description: 
+     * parameters: 
+     * produces: 
+     * responses: 200
+     */
+    get: function getCustomer(request, h) {
+        return Boom.notImplemented();
+    },
+    /**
+     * summary: 
+     * description: 
+     * parameters: body
+     * produces: 
+     * responses: 200
+     */
+    put: function updateCustomer(request, h) {
+        return Boom.notImplemented();
+    },
+    /**
+     * summary: 
+     * description: 
+     * parameters: 
+     * produces: 
+     * responses: 204
+     */
+    delete: function deleteCustomer(request, h) {
+        return Boom.notImplemented();
+    }
+};
